--- a/src/assets/helpers/_base.scss
+++ b/src/assets/helpers/_base.scss
@@ -1,5 +1,5 @@
 // font
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 // 全站樣式
 h1,
@@ -8,15 +8,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Noto Serif TC', serif;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 p,
-div,
-a {
-  font-family: 'Noto Sans TC', sans-serif;
-  font-weight: 400;
+div {
+  font-weight: 500;
 }
 
 img {
