--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -11,10 +11,7 @@
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 @import 'vue-loading-overlay/dist/css/index.css';
 
-// body {
-//   background: $primary-c;
-// }
-#app {
+body {
   background: $primary-c;
   letter-spacing: 1.6px;
 }
