--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -425,7 +425,11 @@ $spacers: (
   10: $spacer * 4.25,
   11: $spacer * 4.5,
   12: $spacer * 4.75,
-  13: $spacer * 5
+  13: $spacer * 5,
+  14: $spacer * 5.25,
+  15: $spacer * 5.5,
+  16: $spacer * 5.75,
+  17: $spacer * 6
 ) !default;
 // scss-docs-end spacer-variables-maps
 
