--- a/src/assets/helpers/_colors.scss
+++ b/src/assets/helpers/_colors.scss
@@ -45,6 +45,8 @@ $bg-c17: linear-gradient(115deg, #5b4f7c 0%, #391e36 100.56%);
 
 $bg-c18: linear-gradient(115deg, rgba(13, 16, 36, 0.1) 0%, rgba(34, 11, 11, 0.31) 100.56%);
 
+$bg-c19: linear-gradient(142deg, #214559 10%, #304459 30%, #494259 50%, #3e2541 80%, #341a38 100%);
+
 // text bg
 $textbg-1: linear-gradient(98deg, #fff 3.89%, #9280db 97.85%);
 
