--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -6,13 +6,13 @@
 @import 'bootstrap/scss/mixins';
 @import 'bootstrap/scss/bootstrap';
 
+@import './helpers/reset';
 @import './helpers/base';
 
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 @import 'vue-loading-overlay/dist/css/index.css';
 
 body {
-  background: $primary-c;
   letter-spacing: 1.6px;
 }
 
