--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -307,6 +307,7 @@ $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-900 !default;
 $white: #ffffff;
+$blue: #30526d;
 
 // scss-docs-end theme-color-variables
 
@@ -320,7 +321,8 @@ $theme-colors: (
   'danger': $danger,
   'light': $light,
   'dark': $dark,
-  'white': $white
+  'white': $white,
+  'blue': $blue
 ) !default;
 // scss-docs-end theme-colors-map
 
